added home page as required in task

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,1 +1,25 @@
-h1 hello
+style.
+	h1{
+		text-align: center;
+	}
+	blockquote{
+		padding-left : 150px;
+		padding-top : 50px;
+		padding-bottom : 50px;
+	}
+	code{
+		padding : 20px;
+	}
+	
+h1 API Basejump: Timestamp microservice
+blockquote 
+	h3 User Stories
+	ol
+		li  I can pass a string as a parameter, and it will check to see whether that string contains either a 
+			unix timestamp or a natural language date (example: January 1, 2016).
+		li 	If it does, it returns both the Unix timestamp and the natural language form of that date.
+		li  If it does not contain a date or Unix timestamp, it returns null for those properties.
+h4 Example usage:
+code https://localhost:3000/December%2015,%202015 
+br
+code https://localhost:3000/1450137600			
